Created Icon Set Structure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IconFinder">
         <activity
-            android:name=".Dashboard"
+            android:name=".ui.Dashboard"
             android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".ui.SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.IconFinderSplash">
             <intent-filter>
