--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.iconfinder">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".helpers.MyApplicationHelper"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IconFinder">
+        <activity
+            android:name=".ui.SearchIcon"
+            android:exported="false" />
+        <activity
+            android:name=".ui.IconSetDetail"
+            android:exported="false" />
         <activity
             android:name=".ui.Dashboard"
             android:exported="false" />
